# attrition-matrix

./: README.md
code/: .env  Cargo.toml  default.nix
code/entity/: Cargo.toml
code/entity/src/: app.rs  app_sdk.rs  intermediate.rs  intermidiate.rs  lib.rs  prelude.rs  sdk.rs
code/frontend/: Cargo.toml
code/frontend/src/public/: index.html  index.js  script.js  style.css
code/migration/: Cargo.toml
code/migration/src/: m20220101_000001_create_table.rs  main.rs
code/src/: lib.rs  main.rs
code/src/api/: api.rs
code/src/api/dto/: example_apps.rs  matrix.rs  mod.rs  sdk_search.rs
code/src/data/: aggregation.rs  selector.rs
code/src/diff_engine/: engine.rs  intermediate.rs  mod.rs
docs/: dev-journal.md
