[package]
edition = "2024"
name = "product-eng-interview"
version = "0.1.0"

[dependencies]
actix-files = "0.6.10"
actix-web = "4.13.0"
dotenv = "0.15.0"

[dependencies.entity]
path = "./entity"

[dependencies.sea-orm]
version = "2.0.0-rc"
features = [
    "sqlx-sqlite",
    "macros",
    "runtime-tokio",
]

[dependencies.tokio]
version = "1.49.0"
features = [
    "rt-multi-thread",
    "macros",
]

[workspace]
members = [
    ".",
    "entity",
    "frontend",
]
